fix ui on small devices after closing menu

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -79,5 +79,9 @@ main {
 @media only screen and (max-width: 800px) {
   main {
     grid-template-columns: 0 16px minmax(1px,1440px) 16px;
+
+    &.sidebar-hidden {
+      grid-template-columns: 0 16px minmax(1px,1440px) 16px;
+    }
   }
 }
